Fix Recent Expenses table background to follow the full width of table element on mobile screens.

--- a/css/style.css
+++ b/css/style.css
@@ -860,6 +860,10 @@ main .analytics .analytics-graph {
     margin: 0;
   }
 
+  #cardinfo-expenses {
+    width: 100vw;
+  }
+
   .right-section {
     width: 94%;
     margin: 0 auto 4rem;
